<resources>
    <string name="app_name">卫戍协议：盟约</string>
    <string name="server_starting">正在启动本地作战引擎…</string>
    <string name="server_ready">本地服务已就绪</string>
    <string name="switch_server_title">网络与服务器设置</string>
    <string name="local_mode">单人单机模式 (内置服务 127.0.0.1:3000)</string>
    <string name="remote_mode">远程联机模式 (连接到指定服务器)</string>
    <string name="server_address_hint">例如: http://192.168.1.100:3000</string>
    <string name="btn_confirm">确认切换</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_restart_service">重启本地服务</string>
    <string name="notification_title">卫戍协议 运行中</string>
    <string name="notification_content">本地对局模拟引擎正在后台运行</string>
    <string name="high_refresh_toggle">动态高刷新率（备战120Hz / 战斗稳60fps，关闭全60）</string>
    <string name="edge_padding_label">异形屏适配：UI 距两侧各 %1$d px（刘海/打孔屏横屏使用）</string>
    <string name="share_logs">分享日志</string>
</resources>
